<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/infoParentLayout">
    
    <TextView
        android:id="@+id/infoHeader"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/infoLabel"
	    android:typeface="monospace" 
	    android:layout_gravity="center_horizontal" />
	
	<TextView
        android:id="@+id/proxInfo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/infoInfo"
	    android:layout_gravity="center_horizontal" />
	
	<LinearLayout
		android:id="@+id/listbuttonLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
    	android:orientation="horizontal"  
	    android:layout_gravity="center_horizontal" >

		<Button
		    android:id="@+id/listButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/listbuttonLabel"
		    android:onClick="viewList" />
		
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/aboutbuttonLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
    	android:orientation="horizontal"  
	    android:layout_gravity="center_horizontal" >

		<Button
		    android:id="@+id/aboutButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/aboutbuttonLabel"
		    android:onClick="viewAbout" />
		
	</LinearLayout>

</LinearLayout>
